# ubuntu_ReinstallBackup

backup/: bashrc_backup.txt  vimrc
demo_repo/cv_nodelet/: CMakeLists.txt  package.xml
demo_repo/cv_nodelet/src/: cv_nodelet.cpp
demo_repo/demo02_urdf_gazebo/: CMakeLists.txt  package.xml
demo_repo/demo02_urdf_gazebo/config/: control.yaml
demo_repo/demo02_urdf_gazebo/launch/: helloworld.launch  myCar.launch  my_car_camera.launch  mycar.launch
demo_repo/demo02_urdf_gazebo/urdf/: urdf01_helloworld.urdf
demo_repo/demo02_urdf_gazebo/xacro/: myCar.urdf  myCar.xacro  my_car_camera.xacro
demo_repo/nov7/: CMakeLists.txt  package.xml
demo_repo/nov7/launch/: mycar.launch
demo_repo/nov7/urdf/: mycar.urdf
demo_repo/nov7/xacro/: base.xacro  mycar.xacro
demo_repo/opencv_test/: CMakeLists.txt  opencv_test_node.cpp  package.xml
demo_repo/review/: CMakeLists.txt  hello.cpp  package.xml
demo_repo/urdf01_rviz/: package.xml
demo_repo/urdf01_rviz/config/: show_mycar.rviz
demo_repo/urdf01_rviz/launch/: demo01_helloworld.launch
demo_repo/urdf01_rviz/urdf/urdf/: demo01_helloworld.urdf
demo_repo/urdf_rviz_demo/: CMakeLists.txt  package.xml
demo_repo/urdf_rviz_demo/launch/: demoCar.launch  demo_joint.launch
demo_repo/urdf_rviz_demo/urdf/urdf/: demoCar.urdf
